Publish hooks now also fail fast if the artifact they are supposed to publish does not exist